// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StageSelect adds expected options to select when language is DE 1`] = `
[
  {
    "name": "Abyssal-Museum",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Anchobit Games HQ",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Center",
    "value": "Arowana Mall",
  },
  {
    "name": "Backfisch-Stadion",
    "value": "Goby Arena",
  },
  {
    "name": "Buckelwal-Piste",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Camp Schützenfisch",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Cetacea-Markt",
    "value": "MakoMart",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Flunder-Funpark",
    "value": "Wahoo World",
  },
  {
    "name": "Grundel-Pavillon",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Grätenkanal",
    "value": "Snapper Canal",
  },
  {
    "name": "Heilbutt-Hafen",
    "value": "Port Mackerel",
  },
  {
    "name": "Hotel Neothun",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Kofferfisch-Lager",
    "value": "Walleye Warehouse",
  },
  {
    "name": "Korallenviertel",
    "value": "The Reef",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Molluskelbude",
    "value": "Musselforge Fitness",
  },
  {
    "name": "Muränentürme",
    "value": "Moray Towers",
  },
  {
    "name": "Perlmutt-Akademie",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Punkasius-Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Seeigel-Rockbühne",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Steinköhler-Grube",
    "value": "Piranha Pit",
  },
  {
    "name": "Störwerft",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "Tümmlerkuppel",
    "value": "Kelp Dome",
  },
  {
    "name": "Unbekannte Arena",
    "value": "Unknown Stage",
  },
  {
    "name": "Wandelzone",
    "value": "Shifty Station",
  },
]
`;

exports[`StageSelect adds expected options to select when language is EN 1`] = `
[
  {
    "name": "Ancho-V Games",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Mall",
    "value": "Arowana Mall",
  },
  {
    "name": "Blackbelly Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Camp Triggerfish",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Goby Arena",
    "value": "Goby Arena",
  },
  {
    "name": "Humpback Pump Track",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Inkblot Art Academy",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Kelp Dome",
    "value": "Kelp Dome",
  },
  {
    "name": "MakoMart",
    "value": "MakoMart",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Moray Towers",
    "value": "Moray Towers",
  },
  {
    "name": "Musselforge Fitness",
    "value": "Musselforge Fitness",
  },
  {
    "name": "New Albacore Hotel",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Piranha Pit",
    "value": "Piranha Pit",
  },
  {
    "name": "Port Mackerel",
    "value": "Port Mackerel",
  },
  {
    "name": "Shellendorf Institute",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Shifty Station",
    "value": "Shifty Station",
  },
  {
    "name": "Skipper Pavilion",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Snapper Canal",
    "value": "Snapper Canal",
  },
  {
    "name": "Starfish Mainstage",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Sturgeon Shipyard",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "The Reef",
    "value": "The Reef",
  },
  {
    "name": "Unknown Stage",
    "value": "Unknown Stage",
  },
  {
    "name": "Wahoo World",
    "value": "Wahoo World",
  },
  {
    "name": "Walleye Warehouse",
    "value": "Walleye Warehouse",
  },
]
`;

exports[`StageSelect adds expected options to select when language is EU_FR 1`] = `
[
  {
    "name": "Allées salées",
    "value": "The Reef",
  },
  {
    "name": "Canalamar",
    "value": "Snapper Canal",
  },
  {
    "name": "Carrière Caviar",
    "value": "Piranha Pit",
  },
  {
    "name": "Centre Arowana",
    "value": "Arowana Mall",
  },
  {
    "name": "Chantier Narval",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Docks Haddock",
    "value": "Port Mackerel",
  },
  {
    "name": "Encrepôt",
    "value": "Walleye Warehouse",
  },
  {
    "name": "Galerie des abysses",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Gymnase Ancrage",
    "value": "Musselforge Fitness",
  },
  {
    "name": "Hippo-Camping",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Hôtel Atoll",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Institut Calam'arts",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Lagune aux gobies",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Parc Carapince",
    "value": "Wahoo World",
  },
  {
    "name": "Piste Méroule",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Plateforme polymorphe",
    "value": "Shifty Station",
  },
  {
    "name": "Scène Sirène",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Serre Goémon",
    "value": "Kelp Dome",
  },
  {
    "name": "Skatepark Mako",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Stade Bernique",
    "value": "Goby Arena",
  },
  {
    "name": "Stage à déterminer",
    "value": "Unknown Stage",
  },
  {
    "name": "Supermarché Cétacé",
    "value": "MakoMart",
  },
  {
    "name": "Tentatec Studio",
    "value": "Ancho-V Games",
  },
  {
    "name": "Tours Girelle",
    "value": "Moray Towers",
  },
]
`;
